--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
         <div class="container">
             <div class="collection">
                 <h1 class="heading">Spotify Music</h1>
-                <p class="lead">
-                    Chill-out is a loosely defined form of popular music characterized by slow tempos and relaxed moods. Identified as a modern type of easy listening.
-                </p>
+                <p class="lead">Spotify Music é uma plataforma de musicas.</p>
                 <hr class="hor" />
                 <div id="musicbox" class="musicbox">
                     <h2>Chillhop Playlist</h2>
@@ -32,7 +30,7 @@
                         </li>
                     </ul>
                 </nav>
-                <h1 class="heading">Zen Lofi Player</h1>
+                <h1 class="heading">Spotify Music Player</h1>
                 <div class="controller">
                     <div id="circle-bg" class="circle">
                         <div id="circle-sm" class="circle2">
