--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>spotifymusic</title>
+    <title>Spotify Music</title>
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
     <meta name="keywords" content="HTML, Javascript, CSS, Codeer, 100DayOfCode." />
     <meta name="description" content="Music Player built with Vanilla Javascript." />
@@ -14,11 +14,13 @@
     <section id="home">
         <div class="container">
             <div class="collection">
-                <h1 class="heading">Spotify Music</h1>
-                <p class="lead">Spotify Music é uma plataforma de musicas.</p>
+                <h1 class="heading">Guigui Player</h1>
+                <p class="lead">
+                    Guigui Player é uma plataforma de musicas guineense.
+                </p>
                 <hr class="hor" />
                 <div id="musicbox" class="musicbox">
-                    <h2>Chillhop Playlist</h2>
+                    <h2>Playlist Guigui</h2>
                 </div>
             </div>
 
@@ -30,7 +32,7 @@
                         </li>
                     </ul>
                 </nav>
-                <h1 class="heading">Spotify Music Player</h1>
+                <h1 class="heading">Guigui Music Player</h1>
                 <div class="controller">
                     <div id="circle-bg" class="circle">
                         <div id="circle-sm" class="circle2">
@@ -41,9 +43,9 @@
                         <h2 id="song-name">Travel love Beats</h2>
                         <div class="controls">
                             <audio id="audio" src=""></audio>
-                            <img id="backward" class="media-btn" src="./assets/images/backward-button.png" />
+                            <img id="backward" class="media-btn" src="./assets/images/btn-back1.png" />
                             <img id="play-stop" class="media-btn" />
-                            <img id="forward" class="media-btn" src="./assets/images/fast-forward.png" />
+                            <img id="forward" class="media-btn" src="./assets/images/btn-fast.png" />
                         </div>
                     </div>
                 </div>
